# IRIS

./: .env.example  INSTALL.md  README.md  iris.db  iris_example_com.html  pyproject.toml
docs/: ARCHITECTURE.md  COLLECTORS.md
iris/: cli.py  config.py  tui.py
iris.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt
iris/api_clients/: __init__.py  free_sources.py  github.py  hibp.py  shodan.py
iris/collectors/: __init__.py  code.py  company.py  domain.py  email.py  network.py  person.py  tech_stack.py  threats.py
iris/correlation/: __init__.py  engine.py  graph.py
iris/db/: __init__.py  cache.py  models.py
iris/exporters/: __init__.py  csv.py  html.py  json.py
iris/utils/: parsers.py  theme.py  validators.py
